# VitaArchive

./: CMakeLists.txt  LICENSE  README.md  archive7z.c  archive7z.h  clipboard.c  clipboard.h  filebrowser.c  filebrowser.h  ftp.c  ftp.h  globals.h  gui.c  gui.h  hash.c  hash.h  head_bin.h  language.c  language.h  main.c  psarc.c  psarc.h  rar.c  rar.h  settings.c  settings.h  vpk.c  vpk.h  zip.c  zip.h
lang/: de.txt  en.txt  es.txt  fr.txt  it.txt  jpn.txt
sce_sys/livearea/contents/: template.xml
